# basic-qc-simulator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
basic_qc_simulator/: __init__.py  circuit.py  gates.py  simulator_result.py  utils.py
basic_qc_simulator/converters/: qiskit.py
basic_qc_simulator/noise/: __init__.py  kraus.py  noise_channel.py  noise_model.py  noisemodel.py  quantum_ops.py
basic_qc_simulator/quantum_info/: __init__.py  ops.py
basic_qc_simulator/quantum_info/states/: __init__.py  density_matrix.py  matrix_product_state.py  state_vector.py
basic_qc_simulator/simulators/: __init__.py  abstract_simulator.py  density_matrix.py  matrix_product_state.py  state_vector.py
examples/: density_matrix_simulator.ipynb  matrix_product_state.ipynb  state_vector_simulator.ipynb
tests/: random.py
tests/noise/: test_noise_channel.py  test_quantum_ops.py
tests/quantum_info/states/: test_matrix_product_state.py
tests/simulators/: test_density_matrix.py  test_matrix_product_state.py  test_state_vector.py
